Project3/testcases/moretest16.out

*** Error line 3.
	vec2 y = 1.6 + x;
                     ^
*** syntax error

