Project3/testcases/moretest16.glsl
void main() {
	int x;
	vec2 y = 1.6 + x;
}
